<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="saema.cti.com.saemacenaim.InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/send_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/section_antecedente" />

            <TextView
                android:text="@string/section_antecedente_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/textView2" />

            <TextView
                android:text="@string/section_saema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/textView3" />

            <TextView
                android:text="@string/section_saema_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/textView4" />

            <TextView
                android:text="@string/section_zona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/textView5" />

            <TextView
                android:text="@string/section_zona_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/textView6" />

            <TextView
                android:text="@string/section_participar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/textView7" />

            <TextView
                android:text="@string/section_participar_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView8" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
