<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="saema.cti.com.saemacenaim.DataFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/email_send_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/section_description"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"/>
        <Button
            android:id="@+id/search_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_search"
            android:textStyle="bold" />

        <TextView
            android:text="foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nombre_foto"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView1" />

        <TextView
            android:id="@+id/data_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/section_name"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText" />

        <Button
            android:id="@+id/upload_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_upload"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>
