<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context="saema.cti.com.saemacenaim.AlertaFragment">
    <ProgressBar
        android:id="@+id/progressBar_indicador"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp" />
    <ScrollView
        android:id="@+id/send_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_send_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
        <!-- TODO: Update blank fragment layout -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/cam_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/section_camaronera" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cam_spinner"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp">
                <!--<TextView
                    android:id="@+id/pisc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/section_piscina"
                    android:gravity="center_vertical"/>-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/piscina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/section_piscina"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/anio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/section_anio" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/anio_spinner" />

                <TextView
                    android:id="@+id/mes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/section_mes" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mes_spinner" />
            </LinearLayout>
            <Button
                android:text="@string/action_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Btn_consultar"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
