<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="saema.cti.com.saemacenaim.AlertaInfoFragment"
    android:background="@android:color/white"
    android:clickable="true">

    <ProgressBar
        android:id="@+id/progressBar_indicador"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:text="@string/section_camaroneras"
                android:layout_width="0dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="right"/>

            <TextView
                android:text="Naturisa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:paddingLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:background="@color/green"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginTop="16dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:text="@string/section_ipm"
                android:layout_width="0dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:gravity="right"/>

            <TextView
                android:text="1.93"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:paddingLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView
                android:text="@string/section_rendimiento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right" />

            <TextView
                android:text="16758.50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:paddingLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView
                android:text="@string/section_supervivencia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right" />

            <TextView
                android:text="63.67"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:paddingLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="16dp">
            <TextView
                android:text="@string/section_peso_promedio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:gravity="right" />

            <TextView
                android:text="26.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:paddingLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
